parlassets/scss/_card.scss
.card-container {
    margin-top: 20px;
    /* overriding bootstrap's padding */
    margin-left: -9px;
    margin-right: -9px;
    height: 100%;
    position: relative;
    top: 0;
    left: 0;
    padding: 0;
    overflow: hidden;
    background-color: #ffffff;
    @include card(1);

    ::-webkit-scrollbar {
      width: 4px;
    }

    ::-webkit-scrollbar-track {
      background: $funblue-light;
      border-radius: 0;
    }

    ::-webkit-scrollbar-thumb {
      background: $sadblue;
      border-radius: 0;
    }
}
.card-header {
    width: 100%;
    height: auto;
    position: relative;
    padding-top: 20px;
    padding-bottom: 20px;

    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: stretch;

    .card-header-border {
      @include gradient('vertical', 'blue');
      display: flex;
      float: none;
      height: auto;
      margin-left: 20px;
      width: 3px;
    }
    h1 {
      margin: 0;
      font-size: 24px;
      line-height: 1.1em;
      padding-left: 13px;
      padding-right: 13px;
      padding-top: 6px;
      padding-bottom: 6px;
      @include respond-to(mobile) { font-size: 18px; }
    }
}
.card-content {
    width: 100%;
    padding: 0 20px 0 20px;
    margin: 0 0 0px 0;
}
.card-content-front { height: 100%; }
// muki made this global (removed col-md-12 > etc.)
.card-container .card-content.full {
    $height: 500px;
    max-height: $height;
    .card-content-front { max-height: $height }
    @include respond-to(desktop) { height: $height }
}
.card-container .card-content.half {
    $height: 180px;
    max-height: $height;
    .card-content-front { max-height: $height }
    @include respond-to(desktop) { height: $height; }
}
// end of muki made this global (removed col-md-12 > etc.)

.card-placeholder {
    background-color: $grey;
    width: 100%;
    height: 300px;
}
.card-footer {
    width: 100%;
    position: relative;

    height: 60px;
    padding: 14px 20px 14px 20px;
    /* this background thing is a hack, still work TODO */
    background-image: url($cdn_home_img + 'shortline.png');
    background-position: center top;
    background-repeat: no-repeat;
    background-size: 100%;
}
.card-circle-button {
    width: 30px;
    height: 30px;
    display: block;
    float: right;
    margin-left: 8px;
    @include border-radius(50%);
    background-color: $sadblue;
    font-family: 'Roboto Slab';
    font-weight: 700;
    font-size: 16px;
    line-height: 30px;
    text-align: center;
    color: $white;
    cursor: pointer;
    &:hover {
        background-color: $funblue;
    }
}
.card-info {
    font-weight: 100;
}
.card-embed {
    background-image: url($cdn_home_icon + 'embed.svg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: 70% 70%;
}
.card-share {
    background-image: url($cdn_home_icon + 'share.svg');
    background-repeat: no-repeat;
    background-position: 6px center;
    background-size: 50% 50%;
}

/*

*/
.card-header-embed {

    height: 115px;

    .headerimage-container {
        float: left;
        width: 80px;
        height: 80px;
    }

    .headerwords-container {
        float: left;
        margin-left: 15px;

        h1 {
            color: $funblue;
            font-weight: 200;
            font-size: 20px !important;
            line-height: 20px !important;
        }

        h2 {
            color: $black;
            font-size: 18px;
            font-weight: 200;

            margin-top: 20px;
            margin-bottom: 0;

            .name {
                font-weight: 400;
            }
        }
    }
}
/*.card-content.half {*/
    .embed-divider {
        display: none;
    }
/*}*/
.card-embed-header-divider {
    height: 1px;

    background-image: url($cdn_home_img + 'shortline.png');
    background-repeat: no-repeat;
    background-size: cover;

    margin-left: -20px;
    margin-right: -20px;
}

.cardhelper{
    margin: 0 0 10px;
    padding: 0;
}

.card-circle-button.card-circle-open{
    background-image:none;
}
.card-circle-button.card-circle-open::after{

}
.card-circle-button.card-circle-close{

}
.card-circle-button.card-circle-closed{
    background-image:none;
    content: "X";
}




// ALT HEADER
.alt-header-container {
    display: flex;
    flex-wrap: wrap;
    width: 100%;

    .alt-header {
        width: 100%;
        padding: 0 20px 20px 20px;

        .session-logo {
            display: block;
            float: left;
            margin-right: 15px;

            border: none;

            b {
                font-size: 20px;
            }
        }

        .header-info-container {
            vertical-align: baseline;
            float: left;

            padding-top: 2px;

            h1 {
                font-size: 16px !important;
            }

            h1, h2 {
                font-size: 16px;
                font-weight: 500;
                margin: 0;
                padding: 0;
                line-height: 18px;
            }

            h2.partyinfo {
                font-weight: 300;
                font-family: 'Roboto Slab';
            }

            h2.cardname {
                font-weight: 300;

                font-size: 18px;
                line-height: 20px;

                margin-top: 18px;

                color: #009cdd;
            }
        }
    }

    .portrait {
        border-radius: 50%;
        flex: none;
        height: 80px;
        margin: 0 18px 0 0;
        width: 80px;

        float: left;
    }

    .alt-header-border {
        height: 1px;
        width: 100%;
        @include gradient('horizontal', 'blue');
    }
}


// CARD BACK
.card-container {
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.175, 0.885, 0.1, 1.08);
    transition: -webkit-transform 0.8s cubic-bezier(0.175, 0.885, 0.1, 1.08); //(0.175, 0.885, 0.32, 1.275);
    transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.1, 1.08);
    transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.1, 1.08), -webkit-transform 0.8s cubic-bezier(0.175, 0.885, 0.1, 1.08);
    -webkit-font-smoothing: antialiased;
    // this is a hack TODO
    overflow: visible;
}

.card-container.flipped {
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg);

    .front {
        pointer-events: none;
    }
}

.front {
    backface-visibility: hidden;
    // this is a hack TODO (same as above)
    overflow: hidden;
    position: relative;
}

.back {
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg);
    background: #ffffff;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    backface-visibility: hidden;
    overflow: hidden;
}

.card-exit {
    background-color: #009CDD;
    background-image: none;
    font-size: 26px;
    font-weight: 300;
    line-height: 28px;
    text-align: center;
}

.info-text {
    position: relative;
    margin: auto;
    max-width: 600px;
    font-weight: 300;
    margin-bottom: 1.5em;
}

label {
    text-shadow: none;
    font-weight: 400;
}

input.form-control, textarea.form-control {
    border-radius: 0;
    box-shadow: none;
    border: 1px solid #000000;
}

.btn-parlameter {
    background-color: #009CDD;
    border: none;
    color: #ffffff;
    height: 34px;
    line-height: 30px;
    padding: 0 10px;;
    margin-top: 5px;
}
.btn-full-width {
    width: 100%;
}
.btn-margin-left {
    margin-left: 20px;
}

// toggle
/* The switch - the box around the slider */
.embed-switch-container {
    width: 100%;
    height: 35px;
    overflow: hidden;
    position: relative;
}

.embed-label {
    float: left;
    line-height: 30px;
    margin-right: 20px;
}

.embed-switch-box {
    display: block;
    position: relative;
    margin-top: 1px;
    float: left;
    overflow: hidden;
    border-radius: 60px;

    .embed-switch {
        display: inline-block;
        height: 20px;
        margin-top: 5px;
        overflow: hidden;
        width: 57px;
        transition: all 0.5s;

        .embed-switches {
            width: 93px;
            height: 20px;
            position: relative;
            left: 0;
            transition: all 0.5s;
        }

        .leftswitch {
            float: left;
            width: 50%;
            text-align: left;
            background-color: #009CDD;
            padding-left: 10px;
            color: #ffffff;
        }

        .rightswitch {
            float: right;
            width: 50%;
            text-align: right;
            background-color: #f0f0f0;
            padding-right: 10px;
        }
    }
}

.embed-switch-ball {
    width: 26px;
    height: 26px;
    border-radius: 13px;
    background-color: #197197;
    position: absolute;
    top: 3px;
    right: 10px;
    transition: all 0.5s;
    -webkit-box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
    -khtml-box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
    -moz-box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
    -ms-box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
    -o-box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
    box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
}

.embed-switch-box.off {
    .embed-switches {
        left: -36.5px;
    }
}

.embed-switch-box.off + .embed-switch-ball {
    right: 47px;
}

.embed-switch-big-box {
    display: block;
    overflow: hidden;
    position: relative;
    width: 80px;
    padding: 0 10px;
    height: 35px;

    cursor: pointer;
}

.embed-divider {
    width: 100%;
    height: 31px;
    padding: 25px 0;

    &::before {
        content: '';
        width: 100%;
        height: 0px;
        background-color: #000000;

        display: block;
        position: relative;
    }
}


// "back side of the card
// card rippling animation
@keyframes ripple {
    0% {
        transform: scale(1);
        /*background-color: #197197;*/
    }
    50% {
        transform: scale(100);
        /*background-color: #197197;*/
    }
    100% {
        transform: scale(1);
        top: -30px;
        left: -30px;
        /*background-color: rgba(255, 255, 255, 0);
        transform: scale(70);*/
    }
}


.card-container, .card-content {
    overflow: hidden;
}
.card-content.scrollme {
    overflow-y: auto;
}
.card-header {
    z-index: 2;
}
.card-footer {
    z-index: 4;
}
.card-content {
    position: relative;
    z-index: 1;
    min-height: 180px;
}
.card-container::before {
    content: '';
    background-color: #009CDD;
    position: absolute;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    position: absolute;
    right: 96px;
    bottom: 16px;

    transition: transform 0.4s ease-out;

    z-index: 3;
}
.card-container.clicked-info::before {
    right: 96px;
    bottom: 18px;
}
.card-container.clicked-embed::before {
    right: 58px;
    bottom: 18px;
}
.card-container.clicked-share::before {
    right: 20px;
    bottom: 18px;
}
.card-container.covered::before {
    animation: ripple 0.6s forwards;
}
.card-container.revealed::before {
    background-color: #197197;
    animation: ripple 0.6s forwards;
}

.card-footer .card-logo {
    width: 50px;
    float: left;
}
.card-footer .card-logo a:hover {
    background: transparent;
}

